@@ -14,4 +14,5 @@ src.excludes = doc/javadoc/
 jars.extra.classpath = resources/junit/junit.jar,\
                        resources/javolution/javolution.jar,\
                        resources/jpa/persistence-api-1.0.jar,\
-                       resources/xstream/xstream-1.2.1.jar
+                       resources/xstream/xstream-1.2.1.jar,\
+                       resources/paranamer/paranamer-1.0-20060927.160533-11.jar
