@@ -1,3 +1,6 @@
+
+
 integration:
 - evaluate if integrating with other validation packages (e.g. commons validator) makes any sense
 - consider constraints specified for method parameters in interfaces
+- adding support for ParaNamer http://paranamer.codehaus.org/
