@@ -1,0 +1,2 @@
+[InternetShortcut]
+URL=http://creativecommons.org/licenses/publicdomain/
