@@ -1,0 +1,2 @@
+[InternetShortcut]
+URL=http://paranamer.codehaus.org/
