@@ -16,6 +16,7 @@
 - various fixes regarding XML based configuration (thanks to tahura)
 + added more JUnit tests for the xml configuration
 + net.sf.oval.configuration.POJOConfigurer and all configuration elements are now serializable
++ added support for ParaNamer http://paranamer.codehaus.org/ for method parameter name resolving
 
 2006-11-12 v0.7
 ===============
